<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TerpSync</string>
    <string name="title_list_activity">Events</string>
    <string name="title_add_event_activity">New Event</string>
    <string name="title_edit_event_activity">Edit Event</string>
    <string name="action_settings">Settings</string>

    <!-- AddEventActivity specific strings: -->
    <!-- Hint Labels. -->
    <string name="enter_event_name">Enter event name</string>
    <string name="enter_event_name_textView">Event event name:</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="add_event_location">Add location</string>
    <string name="search_text">Please type to search for building</string>
    <string name="search_text_textView">Please type to search for building:</string>
    <string name="add_event_description">Add description</string>
    <string name="add_event_description_textView">Add description (optional)</string>
    <!-- Widget Labels. -->
    <string name="event_admission_fee">Admission</string>
    <string name="event_free">Free</string>
    <string name="event_paid">Paid</string>
    <string name="event_save">Submit Event</string>
    <string name="enter_cost">Enter cost</string>
    <string name="enter_cost_textView">$</string>

    <!-- Admin specific strings: -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_setup_login_info">SetupLoginInfo</string>

    <!-- Main activity strings -->
    <string name="newUsername">New username</string>
    <string name="oldUsername">Old username</string>
    <string name="newPassword">New password</string>
    <string name="newPasswordConfirm">Confirm password</string>
    <string name="ora">#ffa500</string>

    <!-- Preferences Strings -->
    <string name="pref_user_settings_title">User Settings</string>
    <string name="pref_title_placeholder">Placeholder</string>
    <string name="pref_summary_placeholder">A place for future options</string>
    <string name="pref_title_map_type">Map Type</string>
    <string name="pref_summary_map_type">Switch between normal and hybrid</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_summary_notifications">Coming soon</string>
    <string name="pref_admin_settings_title">Student Organization Access</string>
    <string name="pref_title_admin_sign_in">Sign in</string>
    <string name="pref_summary_admin_sign_in">Sign in as your organization to add events</string>
    <string name="pref_title_admin_sign_out">Sign out</string>
    <string name="pref_title_admin_manage">Manage Account</string>
    <string name="pref_summary_admin_signed_in_as">Signed in as: </string>
    <string name="pref_title_admin_get_access">Get Access</string>
    <string name="pref_about_settings_title">TerpSync</string>
    <string name="pref_about_title">Visit website</string>
    <string name="pref_summary_about">Click to find out more about the app</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>